manifest/backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-musyaffadli
---
apiVersion: v1
kind: Service
metadata:
  name: cilist-be-svc
  namespace: devops-musyaffadli
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ports:
  - nodePort: 30100
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: cilist
    tier: backend
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cilist-be
  namespace: devops-musyaffadli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cilist
      tier: backend
  template:
    metadata:
      labels:
        app: cilist
        tier: backend
    spec:
      #volumes:
      #- name: configmap-be
      #  configMap:
      #    name: configmap-be
      containers:
      - image: ravennaras/cilist:bejenkins
        name: cilist-be
        ports:
        - containerPort: 5000
        #volumeMounts:
        #- name: configmap-be
        #  mountPath: "/"
        #  subPath: ".env"
      restartPolicy: Always
